# stromadb

./: .dockerignore  .env.example  .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  SECURITY.md  SPEC.md  dev-serve.sh  docker-compose.yml  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  docker-build.yml  release-images.yml
crates/stroma-cli/: Cargo.toml
crates/stroma-cli/src/: main.rs
crates/stroma-cli/tests/: cli.rs
crates/stroma-core/: Cargo.toml
crates/stroma-core/examples/: ann_nprobe_curve.rs  ann_slo.rs  ann_ssd_p99.rs  c2b_integrated.rs  changelog_growth.rs  durability_slo.rs
crates/stroma-core/examples/util/: mod.rs
crates/stroma-core/src/: calendar.rs  catalog.rs  changelog.rs  completeness.rs  conformance.rs  engine.rs  fact.rs  fold.rs  hash.rs  hybrid.rs  incremental.rs  ir.rs  ivf.rs  lib.rs  live.rs  query.rs  vector.rs  version.rs  wal.rs
crates/stroma-core/src/ivf/: build.rs  drift.rs  mod.rs  search.rs  tests.rs
crates/stroma-core/tests/: compaction.rs  fold_determinism.rs
crates/stroma-db/: Cargo.toml
crates/stroma-db/examples/: rw_p99.rs
crates/stroma-db/src/: lib.rs  mcp.rs
crates/stroma-db/tests/: completeness.rs  concurrency.rs  conformance.rs  db.rs  dir_lock.rs  rel_props.rs
crates/stroma-mcp/: Cargo.toml
crates/stroma-mcp/src/: main.rs
crates/stroma-mcp/tests/: mcp.rs
crates/stroma-serve/: Cargo.toml
crates/stroma-serve/src/: login.html  main.rs  ui.html
crates/stroma-serve/tests/: serve.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRACTS.md  DECISIONS.md
docs/architecture/: changelog.md  data-model.md  fold.md  hybrid-search.md  live-query.md  query-ir.md  read-path.md  vector-index.md  version-vector.md  write-contract.md
docs/spec/: changelog.md  data-model.md  fold.md  hybrid-search.md  live-query.md  query-ir.md  read-path.md  vector-index.md  version-vector.md  write-contract.md
examples/: README.md  org-sample.embeddings.ndjson  org-sample.ndjson
