[workspace]
members = ["crates/stroma-core", "crates/stroma-db", "crates/stroma-cli", "crates/stroma-serve"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.87"
license = "LicenseRef-ELv2"
repository = "https://github.com/katsut/stromadb"
keywords = ["graph", "vector", "database", "graphrag", "retrieval"]
categories = ["database-implementations"]

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
strip = true
