[workspace]
members = ["crates/stroma-core", "crates/stroma-db", "crates/stroma-cli", "crates/stroma-serve", "crates/stroma-mcp"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Elastic-2.0"
repository = "https://github.com/katsut/stromadb"

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
strip = true
