[package]
name = "stroma-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "StromaDB command-line interface: init, ingest, query, stats."

[[bin]]
name = "stroma"
path = "src/main.rs"

[dependencies]
stroma-core = { path = "../stroma-core" }
serde_json = "1"
