[package]
name = "stromadb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["graph", "database", "cli", "knowledge-graph", "graphrag"]
categories = ["command-line-utilities", "database"]
description = "StromaDB command-line interface (`stroma` binary): init, ingest, embed, query, stats."

[[bin]]
name = "stroma"
path = "src/main.rs"

[dependencies]
stroma-db = { path = "../stroma-db", version = "0.1.0" }
serde_json = "1"
