[package]
name = "stroma-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "StromaDB core engine: Fact model, type catalog, fold, and query."

[dependencies]

[dev-dependencies]
proptest = "1"
libc = "0.2" # examples only: fcntl(F_NOCACHE) to measure uncached SSD reads (ann_ssd_p99)
