[package]
name = "stroma-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["graph", "database", "vector-search", "knowledge-graph", "graphrag"]
categories = ["database-implementations", "data-structures"]
description = "StromaDB core engine: Fact model, type catalog, fold, and query."

[dependencies]

[dev-dependencies]
proptest = "1"
libc = "0.2" # examples only: fcntl(F_NOCACHE) to measure uncached SSD reads (ann_ssd_p99)
