[package]
name = "stromadb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["graph", "database", "vector-search", "knowledge-graph", "graphrag"]
categories = ["database-implementations", "data-structures"]
description = "StromaDB core engine: Fact model, type catalog, fold, and query. Internal crate published for the StromaDB binaries; no API stability guarantees pre-1.0 — the supported surfaces are the CLI, HTTP server, and MCP."

[dependencies]

[dev-dependencies]
proptest = "1"
libc = "0.2" # examples only: fcntl(F_NOCACHE) to measure uncached SSD reads (ann_ssd_p99)
