[package]
name = "stromadb-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["graph", "database", "vector-search", "knowledge-graph", "graphrag"]
categories = ["database-implementations", "database"]
description = "StromaDB directory-backed database: open, ingest, embed, query over the core engine."

[dependencies]
stromadb-core = { path = "../stroma-core", version = "0.1.0" }
serde_json = "1"
