[package]
name = "stroma-db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "StromaDB directory-backed database: open, ingest, embed, query over the core engine."

[dependencies]
stroma-core = { path = "../stroma-core" }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2" # flock(LOCK_EX | LOCK_NB) on the data directory's LOCK file (std try_lock needs 1.89)
