[package]
name = "stromadb-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["graph", "database", "vector-search", "knowledge-graph", "graphrag"]
categories = ["database-implementations", "database"]
description = "StromaDB directory-backed database: open, ingest, embed, query over the core engine. Internal crate published for the StromaDB binaries; no API stability guarantees pre-1.0 — the supported surfaces are the CLI, HTTP server, and MCP."

[dependencies]
stromadb-core = { path = "../stroma-core", version = "0.1.0" }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2" # flock(LOCK_EX | LOCK_NB) on the data directory's LOCK file (std try_lock needs 1.89)
