[package]
name = "stromadb-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["mcp", "llm", "agent", "graph", "database"]
categories = ["database", "command-line-utilities"]
description = "StromaDB MCP server: expose the database as tools an LLM agent can call over stdio."

[[bin]]
name = "stroma-mcp"
path = "src/main.rs"

[dependencies]
stromadb-store = { path = "../stroma-db", version = "0.1.1" }
serde_json = "1"
